tests/rosetta/out/Fortran/adfgvx-cipher.error
gfortran: exit status 1
/tmp/adfgvx-cipher.f90:79:7:

   79 |       row = shuffled(((i * 6))+1:(((i + 1)) * 6))
      |       1
Error: Unclassifiable statement at (1)
/tmp/adfgvx-cipher.f90:84:27:

   84 |         line = (line + row(((j)+1))) // ' '
      |                           1
Error: Expected a right parenthesis in expression at (1)
/tmp/adfgvx-cipher.f90:103:24:

  103 |       key = (key + pool(((idx)+1)))
      |                        1
Error: Expected a right parenthesis in expression at (1)
/tmp/adfgvx-cipher.f90:133:13:

  133 |     allocate(res(0))
      |             1
Error: Allocate-object at (1) is neither a data pointer nor an allocatable variable
/tmp/adfgvx-cipher.f90:169:15:

  169 |       allocate(row(0))
      |               1
Error: Allocate-object at (1) is neither a data pointer nor an allocatable variable
/tmp/adfgvx-cipher.f90:192:50:

  192 |         colStr = (colStr + table(((ri)+1),((order(((ci)+1)))+1)))
      |                                                  1
Error: Expected a right parenthesis in expression at (1)
/tmp/adfgvx-cipher.f90:233:52:

  233 |         colStrs = (colStrs + (/cipherText((start)+1:i)/))
      |                                                    1
Error: Syntax error in argument list at (1)
/tmp/adfgvx-cipher.f90:253:23:

  253 |         ls = (ls + (/s(((j)+1))/))
      |                       1
Error: Syntax error in array constructor at (1)
/tmp/adfgvx-cipher.f90:276:15:

  276 |       allocate(row(0))
      |               1
Error: Allocate-object at (1) is neither a data pointer nor an allocatable variable
/tmp/adfgvx-cipher.f90:290:30:

  290 |         table(((r)+1),((order(((c)+1)))+1)) = cols(((c)+1),((r)+1))
      |                              1
Error: Expected a right parenthesis in expression at (1)
/tmp/adfgvx-cipher.f90:321:14:

  321 |     cipherText = encrypt(polybius,key,plainText)
      |              1
Error: Symbol ‘ciphertext’ at (1) has no IMPLICIT type
/tmp/adfgvx-cipher.f90:317:13:

  317 |     plainText = 'ATTACKAT1200AM'
      |             1
Error: Symbol ‘plaintext’ at (1) has no IMPLICIT type
/tmp/adfgvx-cipher.f90:318:12:

  318 |     polybius = createPolybius()
      |            1
Error: Symbol ‘polybius’ at (1) has no IMPLICIT type
/tmp/adfgvx-cipher.f90:224:71:

  224 |   recursive character(len=100) function decrypt(polybius,key,cipherText) result(res)
      |                                                                       1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘ciphertext’ at (1)
/tmp/adfgvx-cipher.f90:305:13:

  305 |     plainText = ''
      |             1
Error: Symbol ‘plaintext’ at (1) has no IMPLICIT type
/tmp/adfgvx-cipher.f90:224:56:

  224 |   recursive character(len=100) function decrypt(polybius,key,cipherText) result(res)
      |                                                        1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘polybius’ at (1)
/tmp/adfgvx-cipher.f90:249:7:

  249 |       s = colStrs(((i)+1))
      |       1
Error: Symbol ‘s’ at (1) has no IMPLICIT type
/tmp/adfgvx-cipher.f90:210:38:

  210 |   recursive integer function indexOf(s,ch) result(res)
      |                                      1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘s’ at (1)
/tmp/adfgvx-cipher.f90:142:70:

  142 |   recursive character(len=100) function encrypt(polybius,key,plainText) result(res)
      |                                                                      1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘plaintext’ at (1)
/tmp/adfgvx-cipher.f90:142:56:

  142 |   recursive character(len=100) function encrypt(polybius,key,plainText) result(res)
      |                                                        1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘polybius’ at (1)
/tmp/adfgvx-cipher.f90:111:41:

  111 |   recursive integer function orderKey(key) result(res)
      |                                         1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘key’ at (1)
/tmp/adfgvx-cipher.f90:119:5:

  119 |     n = size(pairs)
      |     1
Error: Symbol ‘n’ at (1) has no IMPLICIT type
/tmp/adfgvx-cipher.f90:46:52:

   46 |   recursive character(len=100) function shuffleStr(s) result(res)
      |                                                    1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘s’ at (1)
/tmp/adfgvx-cipher.f90:72:26:

   72 |     shuffled = shuffleStr(alphabet)
      |                          1
Error: Expected a procedure for argument ‘s’ at (1)
/tmp/adfgvx-cipher.f90:51:13:

   51 |       arr = (arr + (/s(((i)+1))/))
      |             1
Error: Operands of binary numeric operator ‘+’ at (1) are INTEGER(4)/CHARACTER(100)
/tmp/adfgvx-cipher.f90:50:24:

   50 |     do while ((i < size(s)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:56:14:

   56 |       k = mod(now(),((j + 1)))
      |              1
Error: Function ‘now’ at (1) has no IMPLICIT type
/tmp/adfgvx-cipher.f90:65:13:

   65 |       out = (out + arr(((i)+1)))
      |             1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/INTEGER(4)
/tmp/adfgvx-cipher.f90:72:15:

   72 |     shuffled = shuffleStr(alphabet)
      |               1
Error: Cannot convert CHARACTER(100) to INTEGER(4) at (1)
/tmp/adfgvx-cipher.f90:90:4:

   90 |     res = p
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/adfgvx-cipher.f90:95:22:

   95 |     if ((((n < 7) .or. n) > 12)) then
      |                      1
Error: Operands of logical operator ‘.or.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/adfgvx-cipher.f90:102:16:

  102 |       idx = mod(now(),size(pool))
      |                1
Error: Function ‘now’ at (1) has no IMPLICIT type
/tmp/adfgvx-cipher.f90:104:52:

  104 |       pool = (pool(1:idx) + pool(((idx + 1))+1:size(pool)))
      |                                                    1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:324:12:

  324 |     print *, ''//char(10)//'Decrypted : ' // plainText2
      |            1
Error: Operands of string concatenation operator at (1) are CHARACTER(13)/INTEGER(4)
/tmp/adfgvx-cipher.f90:232:23:

  232 |       if ((((i == size(cipherText)) .or. cipherText(((i)+1))) == ' ')) then
      |                       1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:231:25:

  231 |     do while ((i <= size(cipherText)))
      |                         1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:241:16:

  241 |       if ((size(colStrs(((i)+1))) > maxColLen)) then
      |                1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:242:25:

  242 |         maxColLen = size(colStrs(((i)+1)))
      |                         1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:263:19:

  263 |             pad = (pad + (/''/))
      |                   1
Error: Operands of binary numeric operator ‘+’ at (1) are INTEGER(4)/CHARACTER(0)
/tmp/adfgvx-cipher.f90:279:15:

  279 |         row = (row + (/''/))
      |               1
Error: Operands of binary numeric operator ‘+’ at (1) are INTEGER(4)/CHARACTER(0)
/tmp/adfgvx-cipher.f90:278:26:

  278 |       do while ((c < size(key)))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:285:21:

  285 |     order = orderKey(key)
      |                     1
Error: Expected a procedure for argument ‘key’ at (1)
/tmp/adfgvx-cipher.f90:116:40:

  116 |       pairs = (pairs + (/(/key(((i)+1)),i/)/))
      |                                        1
Error: Element in CHARACTER(100) array constructor at (1) is INTEGER(4)
/tmp/adfgvx-cipher.f90:115:24:

  115 |     do while ((i < size(key)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:124:43:

  124 |         if ((pairs(((j)+1),((0)+1)) > pairs((((j + 1))+1),((0)+1)))) then
      |                                           1
Error: Rank mismatch in array reference at (1) (2/1)
/tmp/adfgvx-cipher.f90:124:18:

  124 |         if ((pairs(((j)+1),((0)+1)) > pairs((((j + 1))+1),((0)+1)))) then
      |                  1
Error: Rank mismatch in array reference at (1) (2/1)
/tmp/adfgvx-cipher.f90:125:16:

  125 |           tmp = pairs(((j)+1))
      |                1
Warning: Extension: Conversion from LOGICAL(4) to INTEGER(4) at (1)
/tmp/adfgvx-cipher.f90:127:33:

  127 |           pairs((((j + 1))+1)) = tmp
      |                                 1
Warning: Extension: Conversion from INTEGER(4) to LOGICAL(4) at (1)
/tmp/adfgvx-cipher.f90:136:30:

  136 |       res = (res + (/int(pairs(((i)+1),((1)+1)))/))
      |                              1
Error: Rank mismatch in array reference at (1) (2/1)
/tmp/adfgvx-cipher.f90:289:26:

  289 |       do while ((c < size(key)))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:300:28:

  300 |         temp = (temp + table(((r)+1),((j)+1)))
      |                            1
Error: Rank mismatch in array reference at (1) (2/1)
/tmp/adfgvx-cipher.f90:299:26:

  299 |       do while ((j < size(table(((r)+1)))))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:308:21:

  308 |       rIdx = indexOf(adfgvx,temp((idx)+1:(idx + 1)))
      |                     1
Error: Expected a procedure for argument ‘s’ at (1)
/tmp/adfgvx-cipher.f90:214:24:

  214 |     do while ((i < size(s)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:309:21:

  309 |       cIdx = indexOf(adfgvx,temp(((idx + 1))+1:(idx + 2)))
      |                     1
Error: Expected a procedure for argument ‘s’ at (1)
/tmp/adfgvx-cipher.f90:307:26:

  307 |     do while ((idx < size(temp)))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:153:15:

  153 |           if ((polybius(((r)+1),((c)+1)) == plainText(((i)+1)))) then
      |               1
Error: Operands of comparison operator ‘==’ at (1) are INTEGER(4)/CHARACTER(100)
/tmp/adfgvx-cipher.f90:148:24:

  148 |     do while ((i < size(plainText)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:162:32:

  162 |     colLen = (size(temp) / size(key))
      |                                1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:162:19:

  162 |     colLen = (size(temp) / size(key))
      |                   1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:163:18:

  163 |     if ((mod(size(temp),size(key)) > 0)) then
      |                  1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:172:15:

  172 |         row = (row + (/''/))
      |               1
Error: Operands of binary numeric operator ‘+’ at (1) are INTEGER(4)/CHARACTER(0)
/tmp/adfgvx-cipher.f90:171:26:

  171 |       do while ((j < size(key)))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:180:24:

  180 |       row = (idx / size(key))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:181:25:

  181 |       col = mod(idx,size(key))
      |                         1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:182:11:

  182 |       table(((row)+1),((col)+1)) = temp((idx)+1:(idx + 1))
      |           1
Error: Rank mismatch in array reference at (1) (2/1)
/tmp/adfgvx-cipher.f90:179:26:

  179 |     do while ((idx < size(temp)))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:185:21:

  185 |     order = orderKey(key)
      |                     1
Error: Expected a procedure for argument ‘key’ at (1)
/tmp/adfgvx-cipher.f90:195:14:

  195 |       cols = (cols + (/colStr/))
      |              1
Error: Operands of binary numeric operator ‘+’ at (1) are INTEGER(4)/CHARACTER(100)
/tmp/adfgvx-cipher.f90:188:25:

  188 |     do while ((ci < size(key)))
      |                         1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/adfgvx-cipher.f90:201:16:

  201 |       result = (result + cols(((ci)+1)))
      |                1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/INTEGER(4)
/tmp/adfgvx-cipher.f90:202:11:

  202 |       if (((ci < size(cols)) - 1)) then
      |           1
Error: Operands of binary numeric operator ‘-’ at (1) are LOGICAL(4)/INTEGER(4)
